--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,118 @@
-.App {
-  text-align: center;
+#root {
+  background: black;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.calculator--container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 95vh;
+  width: 520px;
+  background: black;
+}
+
+.screen--container {
+  flex: 0.5;
+  flex: 0.5 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.screen-bottom,
+.screen-top {
+  text-align: right;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
-.App-link {
-  color: #61dafb;
+.screen-top {
+  flex: 1;
+  font-size: 40px;
+  width: 90%;
+  align-self: flex-end;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.screen-bottom {
+  /* background: lightgray; */
+  flex: 2;
+  font-size: 200px;
+  width: 100%;
+  align-self: flex-end;
+}
+
+.keypad {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.block {
+  flex: 1;
+  display: flex;
+}
+
+.btn {
+  flex: 1;
+  border-radius: 50%;
+  margin: 5px;
+  border: none;
+  background: #171717;
+  color: white;
+  font-size: 45px;
+  outline: none;
+  cursor: pointer;
+}
+
+.btn--zero {
+  flex: 2;
+  border-radius: 95px/80px;
+  align-items: end;
+  display: flex;
+  padding-left: 50px;
+}
+
+.btn--orange {
+  background: #e48800;
+}
+
+.btn--grey {
+  background: #9e9e9e;
+  color: black;
+}
+
+@media all and (max-width: 530px) {
+  .btn {
+    font-size: 32px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .calculator--container {
+    width: 420px;
+  }
+
+  .btn--zero {
+    padding-left: 40px;
+  }
+
+  .keypad {
+    flex: 0.6 0.5;
+  }
+}
+
+@media all and (max-width: 420px) {
+  .btn {
+    font-size: 25px;
+  }
+}
+
+@media all and (max-width: 400px) {
+  .calculator--container {
+    /* height: 70vh; */
+    width: 315px;
   }
 }
